Fix after second review