@@ -2,9 +2,10 @@ package com.otus.classes;
 
 import java.lang.*;
 import java.util.*;
+import java.util.stream.Collectors;
 
 import com.otus.classes.animal.Animal;
-import com.otus.classes.animal.actions.Actions;
+import com.otus.classes.animal.Actions;
 import com.otus.classes.animal.data.Commands;
 
 
@@ -12,19 +13,18 @@ public class Runner {
 
     private static final List<Animal> pets = new ArrayList<>();
     private static final Actions actions = new Actions();
-    private static boolean isRun  = true;
 
     public static void main(String[] args) {
 
 
-        while (isRun) {
+        while (true) {
 
             System.out.println("Выберете команду Add/List/Exit");
             Scanner sc = new Scanner(System.in);
             String choose = sc.next().trim().toUpperCase(Locale.ROOT);
 
 
-            boolean isCorrectCommand = Arrays.stream(Commands.values()).map(Commands::name).toList().contains(choose);
+            boolean isCorrectCommand = Arrays.stream(Commands.values()).map(Commands::name).collect(Collectors.toList()).contains(choose);
             if (!isCorrectCommand) {
                 System.out.println("Выберите существующую команду");
                 continue;
@@ -36,10 +36,10 @@ public class Runner {
             switch (commands) {
                 case ADD -> actions.addAnimal(pets);
                 case LIST -> actions.showAnimals(pets);
-                case EXIT -> {actions.exit(); isRun = false;}
+                case EXIT -> actions.exit();
             }
         }
-        System.exit(0);
+
     }
 
 }
